Fixed full-size problem on mobile.

--- a/docker-img/static/css/index.css
+++ b/docker-img/static/css/index.css
@@ -24,7 +24,7 @@ nav a, nav ul a {
 }
 
 .full-size {
-  height: 100vh;
+  min-height: 90vh;
   overflow: hidden;
 }
 
